<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2"
        android:layout_weight="1"
        android:fillViewport="false"
        android:padding="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manage_word_word"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtManageImWordWord"
                android:layout_weight="1"
                android:minLines="3"
                android:gravity="top"
                android:textSize="16pt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manage_word_code"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtManageImWordCode"
                android:layout_weight="1"
                android:textSize="16pt"
                android:textIsSelectable="false" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manage_word_code3r"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtManageImWordCode3r"
                android:layout_weight="1"
                android:textSize="16pt" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/manage_im_cancel"
            android:id="@+id/btnManageImWordCancel"
            android:layout_weight="1" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/manage_im_remove"
            android:id="@+id/btnManageImWordRemove"
            android:layout_weight="1" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/manage_im_update"
            android:id="@+id/btnManageImWordUpdate"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>